Uppdaterad med GET till Suppliers

--- a/Northwind.Web/Northwind.Web.csproj
+++ b/Northwind.Web/Northwind.Web.csproj
@@ -14,4 +14,8 @@
 	  <None Include="wwwroot\index.html" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Northwind.Common.DataContext.SqlServer\Northwind.Common.DataContext.SqlServer.csproj" />
+	</ItemGroup>
+
 </Project>
