--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/a78b5dcf-4327-4b45-bfc3-8b9a84beb372.vsidx
 /Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/ad174af1-8d16-4428-9eca-4bfd35470f6c.vsidx
 /Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/fc71e686-71bb-4bc5-bd8d-52da3a1d0ddc.vsidx
+/Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/2dbac845-f9b6-4e1d-b13a-e6d4bdf583ce.vsidx
+/Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/60af6abf-37f0-4d7c-a53e-2b26c6578fe3.vsidx
+/Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/35e152ab-e5d7-4eca-90b2-c73733fa4627.vsidx
