--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/2dbac845-f9b6-4e1d-b13a-e6d4bdf583ce.vsidx
 /Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/60af6abf-37f0-4d7c-a53e-2b26c6578fe3.vsidx
 /Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/35e152ab-e5d7-4eca-90b2-c73733fa4627.vsidx
+/Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/25e9b361-2f1b-4dd1-b237-075f1fe1f927.vsidx
+/Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/76b443bd-f802-48ae-84d5-966e8034bba6.vsidx
+/Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/cfae5b15-b390-4ec4-bd6d-e7f570f2597e.vsidx
