uppdaterad med Web API projekt

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@
 /Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/12909fef-236f-4d61-b623-4c3b5c399d2a.vsidx
 /Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/141aa8c8-f09b-4f19-820a-89d39613361a.vsidx
 /Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/5fc1f5a0-42b7-448e-866e-6b0e0652331f.vsidx
+/Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/19e401de-566b-4f9e-8b33-df1a13831a3d.vsidx
+/Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/4d9cf590-93a9-47b6-8e70-3507d2856051.vsidx
+/Northwind.Common.EntityModels.SqlServer/.vs/PracticalApps/FileContentIndex/632c1bda-8970-45cc-8581-2434187a71b4.vsidx
